--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="searchpiece_title">Animals</div>
           <input type="text" placeholder="FILTER" class="searchpiece_input">
         </div>
-        <div class="searchbutton clickable"> </div>
+        <div class="searchbutton clickable" onclick="search();"> </div>
         <div class="searchpiece">
           <div class="searchpiece_title">Plants</div>
           <input type="text" placeholder="FILTER" class="searchpiece_input">
