--- a/index.html
+++ b/index.html
@@ -250,6 +250,14 @@
 
     </div>
 
+    <div id="tips">
+
+    	Hold <b>right click</b> to create a new circle or make a previous one larger<br><br>
+    	Hold <b>shift</b> and <b>right click</b> to make a circle smaller<br><br>
+    	Circles can be removed by clicking <b>Clear selection</b> at the top of the screen <u>or</u> making a circle smaller until it dissapears
+
+    </div>
+
     <div id="black"></div>
 
     <div id="share">
