--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
       <div id="tools">
 
         <div class="tool">
-          <div class="tool_cb tool_cb_checked"> </div>
+          <div class="tool_cb tool_cb_checked" id="usemap"> </div>
           <div class="tool_cb_lbl"> USE MAP </div>
         </div>
 
         <div class="tool">
-    	  <div class="tool_cb"> </div>
+    	  <div class="tool_cb" id="invert"> </div>
     	  <div class="tool_cb_lbl"> INVERT CIRCLES </div>
         </div>
 
