--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
     	Hold <b>right click</b> to create a new circle or make a previous one larger<br><br>
     	Hold <b>shift</b> and <b>right click</b> to make a circle smaller<br><br>
-    	Circles can be removed by clicking <b>Clear selection</b> at the top of the screen <u>or</u> making a circle smaller until it dissapears
+    	Circles can be removed by clicking <b>Clear selection</b> at the top of the screen <u>or</u> making a circle smaller until it disappears
 
     </div>
 
