--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
     </div>
 
-    <div id="share">
+    <div id="shareold">
       <div id="share_title">
         <h1> Share </h1>
         <h2 class="clickable" onclick="cancelShare();"> Close </h2>
@@ -269,6 +269,14 @@
 
       </div>
     </div>
+
+    <div id="share">
+    	<div id="share_top">
+    		<div id="share_back" class="clickable noselect" onclick="cancelShare();">Cancel</div>
+    		<div id="share_share" class="noselect">Share Menu</div>
+    	</div>
+    </div>
+
     <div id="share_black"></div>
 
     
