--- a/index.html
+++ b/index.html
@@ -260,21 +260,13 @@
 
     </div>
 
-    <div id="shareold">
-      <div id="share_title">
-        <h1> Share </h1>
-        <h2 class="clickable" onclick="cancelShare();"> Close </h2>
-      </div>
-      <div id="share_content">
-
-      </div>
-    </div>
-
     <div id="share">
     	<div id="share_top">
     		<div id="share_back" class="clickable noselect" onclick="cancelShare();">Cancel</div>
     		<div id="share_share" class="noselect">Share Menu</div>
-    	</div>
+    	</div><br><br>
+    	Share this url to your friends and family!<br><br>
+    	<input id="share_inp" disabled='disabled' type="text" class="share_inp">
     </div>
 
     <div id="share_black"></div>
