--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
     </div>
 	
 	<div id="info">
-		<div id="info_clearsel" class="info">Selection has been cleared!</div>
-		<div id="info_resetcam" class="info">Camera set to longitude:0 latitude:40 zoom:3... Reset...</div>
 	</div>
 
     <div id="menu" class="noselect">
@@ -81,80 +79,80 @@
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('tiger.png')" ></div>
-          <div class="scrolldiv_el_title">Siberian Tiger</div>
-          <div class="scrolldiv_el_loctext">Sikhote Alin mountain region,&#13;&#10;Primorye Province</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Siberian Tiger</div>
+          <div class="scrolldiv_el_loctext">Sikhote Alin mountain region, Primorye Province<br>This is some test text becaise I need ta do this to check if the css is completely working correctly!</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('dog.png')" ></div>
-          <div class="scrolldiv_el_title">Dachschund</div>
-          <div class="scrolldiv_el_loctext">General household regions,&#13;&#10;Ireland and America</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Dachschund</div>
+          <div class="scrolldiv_el_loctext">General household regions, Ireland and America</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('monkey.gif')" ></div>
-          <div class="scrolldiv_el_title">Capuchin Monkey</div>
-          <div class="scrolldiv_el_loctext">Brazil and,&#13;&#10;other parts of Latin America</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Capuchin Monkey</div>
+          <div class="scrolldiv_el_loctext">Brazil and, other parts of Latin America</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('panda.png')" ></div>
-          <div class="scrolldiv_el_title">Giant Panda</div>
-          <div class="scrolldiv_el_loctext">South Central China,&#13;&#10;Shananxi and Ghazu</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Giant Panda</div>
+          <div class="scrolldiv_el_loctext">South Central China, Shananxi and Ghazu</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('panda.png')" ></div>
-          <div class="scrolldiv_el_title">Giant Panda</div>
-          <div class="scrolldiv_el_loctext">South Central China,&#13;&#10;Shananxi and Ghazu</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Giant Panda</div>
+          <div class="scrolldiv_el_loctext">South Central China, Shananxi and Ghazu</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('panda.png')" ></div>
-          <div class="scrolldiv_el_title">Giant Panda</div>
-          <div class="scrolldiv_el_loctext">South Central China,&#13;&#10;Shananxi and Ghazu</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Giant Panda</div>
+          <div class="scrolldiv_el_loctext">South Central China, Shananxi and Ghazu</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('panda.png')" ></div>
-          <div class="scrolldiv_el_title">Giant Panda</div>
-          <div class="scrolldiv_el_loctext">South Central China,&#13;&#10;Shananxi and Ghazu</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Giant Panda</div>
+          <div class="scrolldiv_el_loctext">South Central China, Shananxi and Ghazu</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('panda.png')" ></div>
-          <div class="scrolldiv_el_title">Giant Panda</div>
-          <div class="scrolldiv_el_loctext">South Central China,&#13;&#10;Shananxi and Ghazu</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Giant Panda</div>
+          <div class="scrolldiv_el_loctext">South Central China, Shananxi and Ghazu</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('panda.png')" ></div>
-          <div class="scrolldiv_el_title">Giant Panda</div>
-          <div class="scrolldiv_el_loctext">South Central China,&#13;&#10;Shananxi and Ghazu</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Giant Panda</div>
+          <div class="scrolldiv_el_loctext">South Central China, Shananxi and Ghazu</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('panda.png')" ></div>
-          <div class="scrolldiv_el_title">Giant Panda</div>
-          <div class="scrolldiv_el_loctext">South Central China,&#13;&#10;Shananxi and Ghazu</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Giant Panda</div>
+          <div class="scrolldiv_el_loctext">South Central China, Shananxi and Ghazu</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('panda.png')" ></div>
-          <div class="scrolldiv_el_title">Giant Panda</div>
-          <div class="scrolldiv_el_loctext">South Central China,&#13;&#10;Shananxi and Ghazu</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Giant Panda</div>
+          <div class="scrolldiv_el_loctext">South Central China, Shananxi and Ghazu</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('panda.png')" ></div>
-          <div class="scrolldiv_el_title">Giant Panda</div>
-          <div class="scrolldiv_el_loctext">South Central China,&#13;&#10;Shananxi and Ghazu</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Giant Panda</div>
+          <div class="scrolldiv_el_loctext">South Central China, Shananxi and Ghazu</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('panda.png')" ></div>
-          <div class="scrolldiv_el_title">Giant Panda</div>
-          <div class="scrolldiv_el_loctext">South Central China,&#13;&#10;Shananxi and Ghazu</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Giant Panda</div>
+          <div class="scrolldiv_el_loctext">South Central China, Shananxi and Ghazu</div></div>
         </div>
 
       </div>
@@ -163,92 +161,92 @@
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('tiger.png')" ></div>
-          <div class="scrolldiv_el_title">Dandalion</div>
-          <div class="scrolldiv_el_loctext">Sikhote Alin mountain region,&#13;&#10;Primorye Province</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Dandalion</div>
+          <div class="scrolldiv_el_loctext">Sikhote Alin mountain region, Primorye Province</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('dog.png')" ></div>
-          <div class="scrolldiv_el_title">Leaf</div>
-          <div class="scrolldiv_el_loctext">General household regions,&#13;&#10;Ireland and America</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Leaf</div>
+          <div class="scrolldiv_el_loctext">General household regions, Ireland and America</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('monkey.gif')" ></div>
-          <div class="scrolldiv_el_title">Birch Tree</div>
-          <div class="scrolldiv_el_loctext">Brazil and,&#13;&#10;other parts of Latin America</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Birch Tree</div>
+          <div class="scrolldiv_el_loctext">Brazil and, other parts of Latin America</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('panda.png')" ></div>
-          <div class="scrolldiv_el_title">Sunflowers</div>
-          <div class="scrolldiv_el_loctext">South Central China,&#13;&#10;Shananxi and Ghazu</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Sunflowers</div>
+          <div class="scrolldiv_el_loctext">South Central China, Shananxi and Ghazu</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('panda.png')" ></div>
-          <div class="scrolldiv_el_title">Red Poppy-roses</div>
-          <div class="scrolldiv_el_loctext">South Central China,&#13;&#10;Shananxi and Ghazu</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Red Poppy-roses</div>
+          <div class="scrolldiv_el_loctext">South Central China, Shananxi and Ghazu</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('tiger.png')" ></div>
-          <div class="scrolldiv_el_title">Dandalion</div>
-          <div class="scrolldiv_el_loctext">Sikhote Alin mountain region,&#13;&#10;Primorye Province</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Dandalion</div>
+          <div class="scrolldiv_el_loctext">Sikhote Alin mountain region, Primorye Province</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('dog.png')" ></div>
-          <div class="scrolldiv_el_title">Leaf</div>
-          <div class="scrolldiv_el_loctext">General household regions,&#13;&#10;Ireland and America</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Leaf</div>
+          <div class="scrolldiv_el_loctext">General household regions, Ireland and America</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('monkey.gif')" ></div>
-          <div class="scrolldiv_el_title">Birch Tree</div>
-          <div class="scrolldiv_el_loctext">Brazil and,&#13;&#10;other parts of Latin America</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Birch Tree</div>
+          <div class="scrolldiv_el_loctext">Brazil and, other parts of Latin America</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('panda.png')" ></div>
-          <div class="scrolldiv_el_title">Sunflowers</div>
-          <div class="scrolldiv_el_loctext">South Central China,&#13;&#10;Shananxi and Ghazu</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Sunflowers</div>
+          <div class="scrolldiv_el_loctext">South Central China, Shananxi and Ghazu</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('panda.png')" ></div>
-          <div class="scrolldiv_el_title">Red Poppy-roses</div>
-          <div class="scrolldiv_el_loctext">South Central China,&#13;&#10;Shananxi and Ghazu</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Red Poppy-roses</div>
+          <div class="scrolldiv_el_loctext">South Central China, Shananxi and Ghazu</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('tiger.png')" ></div>
-          <div class="scrolldiv_el_title">Dandalion</div>
-          <div class="scrolldiv_el_loctext">Sikhote Alin mountain region,&#13;&#10;Primorye Province</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Dandalion</div>
+          <div class="scrolldiv_el_loctext">Sikhote Alin mountain region, Primorye Province</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('dog.png')" ></div>
-          <div class="scrolldiv_el_title">Leaf</div>
-          <div class="scrolldiv_el_loctext">General household regions,&#13;&#10;Ireland and America</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Leaf</div>
+          <div class="scrolldiv_el_loctext">General household regions, Ireland and America</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('monkey.gif')" ></div>
-          <div class="scrolldiv_el_title">Birch Tree</div>
-          <div class="scrolldiv_el_loctext">Brazil and,&#13;&#10;other parts of Latin America</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Birch Tree</div>
+          <div class="scrolldiv_el_loctext">Brazil and, other parts of Latin America</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('panda.png')" ></div>
-          <div class="scrolldiv_el_title">Sunflowers</div>
-          <div class="scrolldiv_el_loctext">South Central China,&#13;&#10;Shananxi and Ghazu</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Sunflowers</div>
+          <div class="scrolldiv_el_loctext">South Central China, Shananxi and Ghazu</div></div>
         </div>
 
         <div class="scrolldiv_el clickable">
           <div class="scrolldiv_el_img" style="content:url('panda.png')" ></div>
-          <div class="scrolldiv_el_title">Red Poppy-roses</div>
-          <div class="scrolldiv_el_loctext">South Central China,&#13;&#10;Shananxi and Ghazu</div>
+          <div class="scrolldiv_el_w"><div class="scrolldiv_el_title">Red Poppy-roses</div>
+          <div class="scrolldiv_el_loctext">South Central China, Shananxi and Ghazu</div></div>
         </div>
 
       </div>
