--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <body>
 
     <div id="nav" class="noselect">
-      <div id="nav_search" class="clickable"></div>
-      <div class="nav_el clickable">FIND</div>
-      <div class="nav_el clickable">HISTORY</div>
-      <div class="nav_el clickable">GAME</div>
+      <div id="nav_search" class="clickable" onclick="alert('Map search coming soon!');"></div>
+      <div class="nav_el clickable" onclick="alert('Create your selection!');">FIND</div>
+      <div class="nav_el clickable" onclick="alert('History is not yet implemented!');">HISTORY</div>
+      <div class="nav_el clickable" onclick="alert('Game coming soon!');">GAME</div>
     </div>
 
     <div id="map" class="noselect">
