--- a/index.html
+++ b/index.html
@@ -273,6 +273,8 @@
     </div>
 
     <div id="share_black"></div>
+	
+	<div id="loading" style="content:url('images/bar.gif')"></div>
 
     
   </body>
